font-display css attribute to ensure font visible during page load

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: "Exo", sans-serif;
+  font-display:fallback;
 }
 
 .darcula {
